--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -2,4 +2,4 @@
 
 ---
 
-<div class="flex flex-col gap-8 p-8 bg-white shadow"></div>
+<div class="flex flex-col gap-8 p-8 bg-secondary rounded-lg border border-border"></div>
