--- a/src/components/ReviewSlider.astro
+++ b/src/components/ReviewSlider.astro
@@ -4,17 +4,17 @@ import type { Review } from "../types";
 const allReviews: Review[] = await getCollection("reviews");
 ---
 
-<div class="swiper w-full mt-8 bg-white rounded-lg">
+<div class="swiper w-full mt-8 bg-secondary rounded-lg">
   <div class="swiper-wrapper h-auto w-auto pt-8 pb-12">
     {
       allReviews.map((review) => (
         <div class="swiper-slide cursor-pointer select-none">
           <div class="px-4 lg:px-8">
             <blockquote class="border-none">
-              <p class="text-center font-medium text-2xl text-balance">
+              <p class="text-center font-medium text-2xl text-balance text-primary">
                 {review.data.review}
               </p>
-              <footer class="text-center mt-4">
+              <footer class="text-center mt-4 text-muted">
                 — <cite>{review.data.author}</cite>
               </footer>
             </blockquote>
