--- a/src/components/forms/FormBook.astro
+++ b/src/components/forms/FormBook.astro
@@ -1,43 +1,43 @@
 ---
-
+import { Icon } from "astro-icon/components";
 ---
 
 <form action="#">
 	<div class="flex flex-col gap-8 mx-auto max-w-md">
 		<div>
-			<label for="name">Name</label>
+			<label for="name" class="text-primary">Name</label>
 			<div class="mt-2">
 				<input type="text" name="name" id="name" required />
 			</div>
 		</div>
 
 		<div>
-			<label for="email">Email</label>
+			<label for="email" class="text-primary">Email</label>
 			<div class="mt-2 grid grid-cols-1">
 				<input type="email" name="email" id="email" required />
 			</div>
 		</div>
 
 		<div>
-			<label for="phone">Phone</label>
+			<label for="phone" class="text-primary">Phone</label>
 			<div class="mt-2">
 				<input type="text" name="phone" id="phone" required />
 			</div>
-			<small class="italic text-gray-500">We will call you to confirm your reservation</small>
+			<small class="italic text-muted">We will call you to confirm your reservation</small>
 		</div>
 
 		<div>
-			<label for="date">Date & Time</label>
+			<label for="date" class="text-primary">Date & Time</label>
 			<div class="mt-2">
 				<input type="datetime-local" name="date" id="date" required />
 			</div>
-			<small class="italic text-gray-500"
+			<small class="italic text-muted"
 				>We cannot guarantee availability at the chosen time and date, but will look for the closest opening</small
 			>
 		</div>
 
 		<div>
-			<label for="message">Notes</label>
+			<label for="message" class="text-primary">Notes</label>
 			<div class="mt-2">
 				<textarea
 					name="message"
@@ -49,21 +49,11 @@
 		</div>
 
 		<div>
-			<button type="submit" class="button button-green group !px-8">
-				<svg
-					xmlns="http://www.w3.org/2000/svg"
-					fill="none"
-					viewBox="0 0 24 24"
-					stroke-width="1.5"
-					stroke="currentColor"
-					class="size-5 -rotate-45 -mt-1 inline-block mr-1 group-hover:rotate-0 transition duration-300"
-				>
-					<path
-						stroke-linecap="round"
-						stroke-linejoin="round"
-						d="M6 12 3.269 3.125A59.769 59.769 0 0 1 21.485 12 59.768 59.768 0 0 1 3.27 20.875L5.999 12Zm0 0h7.5"
-					></path>
-				</svg>
+			<button type="submit" class="button button-primary group !px-8">
+				<Icon 
+					name="lucide:send" 
+					class="size-4 -rotate-45 -mt-0.5 inline-block mr-2 group-hover:rotate-0 transition duration-300" 
+				/>
 				Send
 			</button>
 		</div>
