--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,4 +1,5 @@
 ---
+import { Icon } from "astro-icon/components";
 import Layout from "../layouts/Layout.astro";
 import Section from "../components/Section.astro";
 ---
@@ -7,26 +8,16 @@ import Section from "../components/Section.astro";
   <Section>
     <div class="min-h-full mx-auto w-full max-w-6xl">
       <div class="text-center">
-        <p class="font-bold text-brand-red text-8xl">404</p>
-        <h1 class="mt-8 text-4xl font-black text-balance lg:text-5xl">
+        <p class="font-bold text-accent text-8xl">404</p>
+        <h1 class="mt-8 text-4xl font-black text-balance lg:text-5xl text-primary">
           This page could not be found.
         </h1>
-        <p class="mt-6 text-base text-balance">
+        <p class="mt-6 text-base text-balance text-secondary">
           You may have mistyped the address or the page may have moved.
         </p>
         <div class="mt-16">
-          <a href="/" class="button button-green">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 20 20"
-              fill="currentColor"
-              class="size-4 inline-block -mt-0.5 mr-1"
-            >
-              <path
-                fill-rule="evenodd"
-                d="M9.293 2.293a1 1 0 0 1 1.414 0l7 7A1 1 0 0 1 17 11h-1v6a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v-3a1 1 0 0 0-1-1H9a1 1 0 0 0-1 1v3a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1v-6H3a1 1 0 0 1-.707-1.707l7-7Z"
-                clip-rule="evenodd"></path>
-            </svg>
+          <a href="/" class="button button-primary">
+            <Icon name="lucide:home" class="size-4 inline-block -mt-0.5 mr-2" />
             Go back home
           </a>
         </div>
