--- a/src/pages/book.astro
+++ b/src/pages/book.astro
@@ -8,10 +8,10 @@ import FormBook from "../components/forms/FormBook.astro";
 <Layout>
   <Section>
     <Heading>
-      <h2 slot="heading-title" class="font-black text-brand-green h2">
+      <h2 slot="heading-title" class="font-black text-primary h2">
         Book a table
       </h2>
-      <p slot="heading-content" class="text-pretty">
+      <p slot="heading-content" class="text-pretty text-secondary">
         Reserve a table for your next meal. We'll get back to you to confirm
         your booking.
       </p>
