--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -8,10 +8,10 @@ import FormContact from "../components/forms/FormContact.astro";
 <Layout>
   <Section>
     <Heading>
-      <h2 slot="heading-title" class="font-black text-brand-green h2">
+      <h2 slot="heading-title" class="font-black text-primary h2">
         Contact
       </h2>
-      <p slot="heading-content">
+      <p slot="heading-content" class="text-secondary">
         Get in touch with us for any questions or inquiries.
       </p>
     </Heading>
