--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -12,10 +12,10 @@ const gallery: Gallery[] = await getCollection("gallery");
 <Layout>
   <Section class:list={"[&>.container]:pb-0"}>
     <Heading>
-      <h1 slot="heading-title" class="font-black text-brand-green h2">
+      <h1 slot="heading-title" class="font-black text-primary h2">
         Gallery
       </h1>
-      <p slot="heading-content">
+      <p slot="heading-content" class="text-secondary">
         Get a feel of our restaurant and food through our gallery. We promise a
         memorable culinary experience.
       </p>
