--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import { Icon } from "astro-icon/components";
 import Layout from "../layouts/Layout.astro";
 import Section from "../components/Section.astro";
 import Hero from "../components/Hero.astro";
@@ -23,20 +24,22 @@ import Mussels from "../assets/images/mussels2.png";
 ---
 
 <Layout title="Home" pageTitle="Home" description="Welcome to our restaurant!">
-  <Section class:list={"bg-white"}>
+  <Section>
     <Hero>
       <div slot="hero-content-left" class="prose max-w-none max-lg:order-1">
         <Badge title="il ristorante italiana" />
-        <h1 class="font-black">St. George's Best Italian Restaurant</h1>
+        <h1 class="font-black text-primary">St. George's Best Italian Restaurant</h1>
 
-        <p>
+        <p class="text-secondary">
           Experience the taste of Italy with our authentic dishes made from the
           finest ingredients. Indulge in our wide variety of pizzas, pastas, and
           desserts, all crafted with love and tradition. Whether you're dining
           in or taking out, we promise a memorable culinary experience.
         </p>
 
-        <span class="text-brand-green font-medium">✔ We also deliver</span>
+        <span class="text-accent font-medium flex items-center gap-2">
+          <Icon name="lucide:check" class="size-4" /> We also deliver
+        </span>
 
         <div class="mt-8 flex items-center gap-x-8">
           <Button url="/book">Book now</Button>
@@ -60,15 +63,15 @@ import Mussels from "../assets/images/mussels2.png";
   <WideImage
     image={DecorativeImage}
     alt="Just an image"
-    class:list={"aspect-video lg:aspect-[16/6]"}
+    class:list={"aspect-video lg:aspect-16/6"}
   />
 
-  <Section class:list={"bg-white"}>
+  <Section>
     <Heading>
-      <h2 slot="heading-title" class="font-black text-brand-green h2">
+      <h2 slot="heading-title" class="font-black text-primary h2">
         Our dishes
       </h2>
-      <p slot="heading-content">
+      <p slot="heading-content" class="text-secondary">
         Explore our selection of authentic Italian dishes, from classic pizzas
         to homemade pastas.
       </p>
@@ -83,8 +86,8 @@ import Mussels from "../assets/images/mussels2.png";
             formats={["avif", "webp"]}
             alt="A description of my image."
           />
-          <h3 class="h4 mt-0 font-black">Pasta &amp; Spaghetti</h3>
-          <p>
+          <h3 class="h4 mt-0 font-black text-primary">Pasta &amp; Spaghetti</h3>
+          <p class="text-secondary">
             Pasta is a staple of Italian cuisine, with a rich history dating
             back centuries. It comes in various shapes and sizes, each suited to
             different sauces and preparations.
@@ -100,8 +103,8 @@ import Mussels from "../assets/images/mussels2.png";
             formats={["avif", "webp"]}
             alt="A description of my image."
           />
-          <h3 class="h4 mt-0 font-black">Pasta &amp; Spaghetti</h3>
-          <p>
+          <h3 class="h4 mt-0 font-black text-primary">Pasta &amp; Spaghetti</h3>
+          <p class="text-secondary">
             Pasta is a staple of Italian cuisine, with a rich history dating
             back centuries. It comes in various shapes and sizes, each suited to
             different sauces and preparations.
@@ -117,8 +120,8 @@ import Mussels from "../assets/images/mussels2.png";
             formats={["avif", "webp"]}
             alt="A description of my image."
           />
-          <h3 class="h4 mt-0 font-black">Pasta &amp; Spaghetti</h3>
-          <p>
+          <h3 class="h4 mt-0 font-black text-primary">Pasta &amp; Spaghetti</h3>
+          <p class="text-secondary">
             Pasta is a staple of Italian cuisine, with a rich history dating
             back centuries. It comes in various shapes and sizes, each suited to
             different sauces and preparations.
@@ -128,12 +131,12 @@ import Mussels from "../assets/images/mussels2.png";
     </Grid>
   </Section>
 
-  <Section class:list={"bg-white"}>
+  <Section>
     <Hero>
       <div slot="hero-content-left" class="prose lg:order-2">
-        <h1 class="font-black">Pizza</h1>
+        <h1 class="font-black text-primary">Pizza</h1>
 
-        <p>
+        <p class="text-secondary">
           Pizza is a beloved dish that originated in Italy and has since become
           a global sensation. Its versatility allows for endless combinations of
           toppings, from classic margherita with fresh tomatoes, mozzarella, and
@@ -141,7 +144,7 @@ import Mussels from "../assets/images/mussels2.png";
           cheese.
         </p>
 
-        <p>
+        <p class="text-secondary">
           Whether enjoyed at a cozy pizzeria or delivered to your doorstep,
           pizza brings people together and satisfies cravings like no other
           food. Beyond its delicious taste, pizza also holds cultural
@@ -151,18 +154,7 @@ import Mussels from "../assets/images/mussels2.png";
 
         <div class="mt-8">
           <Button url="/menu">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 20 20"
-              fill="currentColor"
-              class="size-5 inline-block"
-              aria-hidden="true"
-            >
-              <path
-                fill-rule="evenodd"
-                d="M8.22 5.22a.75.75 0 0 1 1.06 0l4.25 4.25a.75.75 0 0 1 0 1.06l-4.25 4.25a.75.75 0 0 1-1.06-1.06L11.94 10 8.22 6.28a.75.75 0 0 1 0-1.06Z"
-                clip-rule="evenodd"></path>
-            </svg>
+            <Icon name="lucide:chevron-right" class="size-5 inline-block" />
             View menu
           </Button>
         </div>
@@ -179,17 +171,17 @@ import Mussels from "../assets/images/mussels2.png";
     </Hero>
   </Section>
 
-  <Section class:list={"bg-white"}>
+  <Section>
     <Hero>
       <div slot="hero-content-left" class="prose max-w-none max-lg:order-1">
-        <Badge color="red" title="delicious" />
-        <h2 class="font-black h2 !my-4">Plate of the week</h2>
+        <Badge color="secondary" title="delicious" />
+        <h2 class="font-black h2 my-4! text-primary">Plate of the week</h2>
 
-        <span class="text-brand-red text-2xl font-bold italic"
+        <span class="text-accent text-2xl font-bold italic"
           >Fresh Mussels!</span
         >
 
-        <p>
+        <p class="text-secondary">
           Our plate of the week is a delicious dish that changes every week.
           This week, we're featuring fresh mussels cooked in a white wine and
           garlic sauce, served with a side of crispy fries. Don't miss out on
@@ -197,7 +189,7 @@ import Mussels from "../assets/images/mussels2.png";
         </p>
 
         <div class="mt-8">
-          <Button color="red" url="/book">Book now</Button>
+          <Button color="secondary" url="/book">Book now</Button>
         </div>
       </div>
       <div slot="hero-content-right">
@@ -213,18 +205,18 @@ import Mussels from "../assets/images/mussels2.png";
   </Section>
 
   <!-- Reviews -->
-  <Section class:list={"bg-brand-red/20 relative"}>
+  <Section class:list={"bg-secondary relative py-24"}>
     <div class="py-16">
       <Hero>
         <div slot="hero-content-left" class="prose max-w-none order-2">
           <div class="text-center not-prose">
-            <Badge color="white" title="reviews" />
+            <Badge title="reviews" />
           </div>
-          <h2 slot="heading-title" class="font-black h4 text-center mt-0 mb-4">
+          <h2 slot="heading-title" class="font-black h4 text-center mt-0 mb-4 text-primary">
             What our customers say...
           </h2>
           <div slot="heading-content">
-            <p class="text-center">
+            <p class="text-center text-secondary">
               Don't just take our word for it. Read what our customers have to
               say about their dining experience at our restaurant.
             </p>
@@ -242,47 +234,24 @@ import Mussels from "../assets/images/mussels2.png";
         </div>
       </Hero>
     </div>
-
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      viewBox="0 0 1440 320"
-      class="absolute h-40 w-full top-0 inset-x-0 rotate-180"
-      preserveAspectRatio="none"
-      ><path
-        fill="#ffffff"
-        fill-opacity="1"
-        d="M0,288L48,272C96,256,192,224,288,197.3C384,171,480,149,576,165.3C672,181,768,235,864,250.7C960,267,1056,245,1152,250.7C1248,256,1344,288,1392,304L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
-      ></path>
-    </svg>
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      viewBox="0 0 1440 320"
-      class="absolute h-40 w-full bottom-0 inset-x-0"
-      preserveAspectRatio="none"
-      ><path
-        fill="#ffffff"
-        fill-opacity="1"
-        d="M0,288L48,272C96,256,192,224,288,197.3C384,171,480,149,576,165.3C672,181,768,235,864,250.7C960,267,1056,245,1152,250.7C1248,256,1344,288,1392,304L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
-      ></path>
-    </svg>
   </Section>
 
   <!-- Desserts -->
-  <Section class:list={"bg-white"}>
+  <Section>
     <Hero>
       <div slot="hero-content-left" class="prose max-w-none order-2">
         <Badge title="dolce" />
-        <h2 slot="heading-title" class="font-black text-brand-green h2 !my-4">
+        <h2 slot="heading-title" class="font-black text-primary h2 my-4!">
           Desserts
         </h2>
         <div slot="heading-content">
-          <p>
+          <p class="text-secondary">
             Indulge in our selection of sweet treats, from classic tiramisu to
             decadent chocolate cake. Our desserts are the perfect way to end
             your meal on a high note.
           </p>
 
-          <p>
+          <p class="text-secondary">
             Experience the taste of Italy with our authentic dishes made from
             the finest ingredients. Indulge in our wide variety of pizzas,
             pastas, and desserts, all crafted with love and tradition. Whether
@@ -309,26 +278,26 @@ import Mussels from "../assets/images/mussels2.png";
   </Section>
 
   <!-- Contact -->
-  <Section class:list={"bg-white"}>
+  <Section>
     <Hero>
       <div slot="hero-content-left" class="prose max-w-none">
-        <Badge color="red" title="benvenuto" />
-        <h2 slot="heading-title" class="font-black text-brand-red h2 !my-4">
+        <Badge color="secondary" title="benvenuto" />
+        <h2 slot="heading-title" class="font-black text-primary h2 my-4!">
           Drop by and say hello
         </h2>
         <div slot="heading-content">
-          <p>
+          <p class="text-secondary">
             We're located in the heart of the city, just a stone's throw away
             from the main square. Our restaurant is the perfect place to enjoy a
             delicious meal with friends and family.
           </p>
 
-          <span class="text-brand-red font-medium">
-            ✔ We also do take-away, so you can enjoy your food at home
+          <span class="text-accent font-medium flex items-center gap-2">
+            <Icon name="lucide:check" class="size-4" /> We also do take-away, so you can enjoy your food at home
           </span>
 
           <div class="mt-8">
-            <Button color="red" url="/book">Book a table</Button>
+            <Button color="secondary" url="/book">Book a table</Button>
           </div>
         </div>
       </div>
