--- a/src/pages/menu.astro
+++ b/src/pages/menu.astro
@@ -8,10 +8,10 @@ import MenuList from "../components/Menu.astro";
 <Layout>
   <Section>
     <Heading>
-      <h1 slot="heading-title" class="font-black text-brand-green h2">
+      <h1 slot="heading-title" class="font-black text-primary h2">
         Our menu
       </h1>
-      <p slot="heading-content">
+      <p slot="heading-content" class="text-secondary">
         We offer a variety of dishes, from traditional to modern, that are sure
         to satisfy your cravings.
       </p>
